[gd_scene load_steps=20 format=2]

[ext_resource path="res://nodes/CustomRichText.gd" type="Script" id=1]
[ext_resource path="res://nodes/BBCodeSRC.gd" type="Script" id=2]
[ext_resource path="res://assets/lttp_se_message_tick.wav" type="AudioStream" id=3]
[ext_resource path="res://richtexteffects/ghost.gd" type="Script" id=4]
[ext_resource path="res://richtexteffects/pulse.gd" type="Script" id=5]
[ext_resource path="res://richtexteffects/matrix.gd" type="Script" id=6]
[ext_resource path="res://font/pixel.tres" type="DynamicFont" id=7]
[ext_resource path="res://assets/lttp_se_message_fin.wav" type="AudioStream" id=8]
[ext_resource path="res://nodes/BBCodePanel.gd" type="Script" id=9]
[ext_resource path="res://nodes/TextTimer.gd" type="Script" id=10]
[ext_resource path="res://nodes/SpeakSound.gd" type="Script" id=11]
[ext_resource path="res://nodes/TestEnvironment.gd" type="Script" id=12]
[ext_resource path="res://richtexteffects/hide.gd" type="Script" id=13]

[sub_resource type="Theme" id=1]

[sub_resource type="RichTextEffect" id=2]
resource_name = "RichTextGhost"
script = ExtResource( 4 )

[sub_resource type="RichTextEffect" id=3]
resource_name = "RichTextMatrix"
script = ExtResource( 6 )

[sub_resource type="RichTextEffect" id=4]
resource_name = "RichTextPulse"
script = ExtResource( 5 )

[sub_resource type="RichTextEffect" id=5]
script = ExtResource( 13 )

[sub_resource type="AudioStreamRandomPitch" id=6]
audio_stream = ExtResource( 3 )
random_pitch = 1.06

[node name="TestEnvironment" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}
tornado = "[center]Here's a look at the [tornado radius=5 freq=5]tornado[/tornado] text effect.[/center]"
wave = "[center]Here's a look at the 
[wave amp=50 freq=2]wave text effect[/wave].[/center]"
shake = "[center]Here's a look at the 
[shake rate=15 level=10]shake[/shake] text effect.[/center]"
fade = "[center]Here's a look at the 
[fade start=4 length=14]fade text effect...[/fade][/center]"
rainbow = "[center]Here's a look at the [rainbow freq=0.2]rainbow[/rainbow] text effect.[/center]"
custom = "[center][ghost]This is a custom [matrix]effect[/matrix][/ghost]
made in [pulse freq=5.0 height=2.0][pulse color=#00FFAA freq=2.0]GDScript[/pulse][/pulse].[/center]"
custom_hidden = "[hide char=c][wave freq=20]Hello captain, can you guess the completely hidden char?[/wave][/hide]"

[node name="HSplitContainer" type="HSplitContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="BBCodePanel" type="Panel" parent="HSplitContainer"]
visible = false
margin_right = 350.0
margin_bottom = 600.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 350, 0 )
rect_clip_content = true
size_flags_horizontal = 13
size_flags_vertical = 13
theme = SubResource( 1 )
script = ExtResource( 9 )

[node name="MarginContainer" type="MarginContainer" parent="HSplitContainer/BBCodePanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
size_flags_horizontal = 15
size_flags_vertical = 15

[node name="VBoxContainer" type="VBoxContainer" parent="HSplitContainer/BBCodePanel/MarginContainer"]
margin_right = 310.0
margin_bottom = 560.0
size_flags_horizontal = 15
size_flags_vertical = 15
size_flags_stretch_ratio = 0.0

[node name="HBoxContainer" type="HBoxContainer" parent="HSplitContainer/BBCodePanel/MarginContainer/VBoxContainer"]
margin_right = 310.0
margin_bottom = 14.0
size_flags_horizontal = 7
size_flags_vertical = 13

[node name="Effect Name" type="Label" parent="HSplitContainer/BBCodePanel/MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 87.0
margin_bottom = 14.0
text = "EFFECT_NAME"

[node name="Source" type="Label" parent="HSplitContainer/BBCodePanel/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 91.0
margin_right = 202.0
margin_bottom = 14.0
text = "-- BBCode Source"

[node name="BBCodeSRC" type="TextEdit" parent="HSplitContainer/BBCodePanel/MarginContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 310.0
margin_bottom = 560.0
rect_min_size = Vector2( 300, 400 )
size_flags_horizontal = 3
size_flags_vertical = 3
wrap_enabled = true
script = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="HSplitContainer"]
margin_right = 1024.0
margin_bottom = 600.0

[node name="Control" type="Control" parent="HSplitContainer/MarginContainer"]
margin_right = 1024.0
margin_bottom = 600.0
rect_min_size = Vector2( 500, 500 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HSplitContainer/MarginContainer/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="HSplitContainer/MarginContainer/Control/VBoxContainer"]
margin_right = 1024.0
margin_bottom = 40.0

[node name="ShowSplit" type="CheckButton" parent="HSplitContainer/MarginContainer/Control/VBoxContainer/HBoxContainer"]
margin_right = 175.0
margin_bottom = 40.0
text = "Show BBCODE:"

[node name="Control" type="Control" parent="HSplitContainer/MarginContainer/Control/VBoxContainer/HBoxContainer"]
margin_left = 179.0
margin_right = 179.0
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="PresetChooser" type="OptionButton" parent="HSplitContainer/MarginContainer/Control/VBoxContainer/HBoxContainer"]
margin_left = 603.0
margin_right = 1024.0
margin_bottom = 40.0
grow_horizontal = 2
size_flags_horizontal = 3
text = "Custom"
items = [ "Tornado", null, false, 0, null, "Wave", null, false, 1, null, "Shake", null, false, 2, null, "Fade", null, false, 3, null, "Rainbow", null, false, 4, null, "Custom", null, false, 5, null, "Hidden (Custom)", null, false, 6, null ]
selected = 5

[node name="CenterContainer" type="CenterContainer" parent="HSplitContainer/MarginContainer/Control/VBoxContainer"]
margin_top = 44.0
margin_right = 1024.0
margin_bottom = 600.0
grow_horizontal = 2
rect_min_size = Vector2( 0, 532.37 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="BBCodeView" type="RichTextLabel" parent="HSplitContainer/MarginContainer/Control/VBoxContainer/CenterContainer"]
margin_left = 362.0
margin_top = 178.0
margin_right = 662.0
margin_bottom = 378.0
rect_min_size = Vector2( 300, 200 )
rect_clip_content = false
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/normal_font = ExtResource( 7 )
custom_colors/font_color_shadow = Color( 0.0627451, 0.054902, 0.054902, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 3
bbcode_enabled = true
bbcode_text = "[hide char=c][wave freq=20]Hello captain, can you guess the completely hidden char?[/wave][/hide]"
text = "Hello captain, can you guess the completely hidden char?"
scroll_active = false
custom_effects = [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ]
script = ExtResource( 1 )

[node name="TextTimer" type="Timer" parent="."]
wait_time = 0.06
autostart = true
script = ExtResource( 10 )

[node name="SpeakSound" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 512, 0 )
stream = SubResource( 6 )
script = ExtResource( 11 )

[node name="FinishSound" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 512, 0 )
stream = ExtResource( 8 )
script = ExtResource( 11 )
[connection signal="example_changed" from="." to="HSplitContainer/BBCodePanel/MarginContainer/VBoxContainer/BBCodeSRC" method="_on_RTLTestingEnvironment_example_changed"]
[connection signal="reset_views" from="." to="TextTimer" method="reset"]
[connection signal="source_changed" from="HSplitContainer/BBCodePanel/MarginContainer/VBoxContainer/BBCodeSRC" to="HSplitContainer/MarginContainer/Control/VBoxContainer/CenterContainer/BBCodeView" method="_on_BBCodeSRC_source_changed"]
[connection signal="toggled" from="HSplitContainer/MarginContainer/Control/VBoxContainer/HBoxContainer/ShowSplit" to="HSplitContainer/BBCodePanel" method="_on_ShowSplit_toggled"]
[connection signal="item_selected" from="HSplitContainer/MarginContainer/Control/VBoxContainer/HBoxContainer/PresetChooser" to="." method="_on_PresetChooser_item_selected"]
[connection signal="finished" from="TextTimer" to="FinishSound" method="play_no_interrupt"]
[connection signal="speak" from="TextTimer" to="SpeakSound" method="play_no_interrupt"]
